[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-rag"
version = "0.1.0"
description = "FastAPI RAG server and document ingestion tooling"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
  { name = "Sushant Gautam" }
]
keywords = ["rag", "fastapi", "langchain", "milvus"]

dependencies = [
  "fastapi==0.128.0",
  "uvicorn[standard]==0.40.0",
  "langchain==1.2.7",
  "langchain-openai==1.1.7",
  "langchain-community==0.4.1",
  "langchain_milvus==0.3.3",
  "langchain-text-splitters==1.1.0",
  "pymilvus==2.6.7",
  "milvus-lite==2.5.1",
  "python-dotenv==1.2.1",
  "pydantic==2.12.5",
  "requests==2.32.5",
]

[project.urls]
"Homepage" = "https://github.com/SushantGautam/vllm-RAG"

[project.scripts]
rag-server = "rag_server:main"
ingest-document = "ingest_documents:main"
setup = "setup_app:main"

[tool.setuptools]
py-modules = ["rag_server", "ingest_documents", "client", "utils", "setup_app"]
